--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,43 @@
 .App {
-  text-align: center;
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     background-color: rgb(229, 218, 247);
 }
 
+.information {
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     width: 100%;
+     height: 100%;
+}
+
+.information input {
+     width: 50%;
+     height: 50px;
+     border: 1.5px solid rgb(0, 0, 0);
+     border-radius: 10px;
+     padding: 0 10px;
+     font-size: 20px;
+     margin-top: 5px;
+     margin-bottom: 10px;
+}
+
+.information button {
+     width: 50%;
+     height: 50px;
+     border: 1.5px solid rgb(0, 0, 0);
+     border-radius: 10px;
+     padding: 0 10px;
+     font-size: 20px;
+     margin-top: 5px;
+     margin-bottom: 10px;
+}
+
+.information button:hover {
+     cursor: pointer;
+     background-color: rgb(35, 33, 39);
+     color: rgb(229, 218, 247);
+}
